--- a/style.css
+++ b/style.css
@@ -60,19 +60,53 @@ nav li a{
     margin-top: 20px;
     align-content: center;
 }
+main{
+    max-width: 1440px0;
+    margin: 70px auto;
+}
+.team-container{
+    display: flex;
+    align-items: center;
+}
+.pera{
+    color: gray;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1.5rem;
+}
+.team-content{
+    padding-right: 70px;
+    padding-left: 70px;
+}
+.team-title{
+    font-size: 2.8rem;
+}
+.team-title .quick{
+    color: gray;
+    font-weight: 500;
+}
+.team-title .feat{
+    color: orange;
+    font-weight: 700;
+}
 @media screen and (max-width:576px) {
     header{
         padding: 20px;
     }
-    nav{
+    nav, .team-container{
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
     }
 }
 @media screen and (min-width:576px){
     header{
         padding: 20px;
     }
-    nav{
+    nav, .team-container{
         flex-direction: column;
     }
 }
