--- a/style.css
+++ b/style.css
@@ -92,11 +92,11 @@ main{
     font-weight: 700;
 }
 
-.fats-container{
+.facts-container{
     display: flex;
     justify-content: space-around;
 }
-.facts-container, .card{
+.card{
     border-radius: 8px;
     border: 1px solid orange;
     text-align: center;
@@ -112,6 +112,19 @@ main{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    gap: 20px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 @media screen and (max-width:576px) {
     header{
         padding: 20px;
@@ -122,12 +135,21 @@ main{
     .teams-img-container{
         grid-template-columns: 1fr;
     }
+    .facts-container{
+        gap: 20px;
+    }
+    .sponsors-img-container{
+        flex-direction: column;
+    }
 }
 @media screen and (min-width:576px){
     header{
         padding: 20px;
     }
-    nav, .team-container{
+    nav, .team-container, .sponsors-img-container{
         flex-direction: column;
+    }
+    .facts-container{
+        gap: 30px;
     }
 }
