--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 /* header styles */
 
 header{
-    background: rgb(255, 182, 182);
+    background: rgb(241, 214, 214);
     padding: 50px 240px ;
 }
 nav{
@@ -96,7 +96,7 @@ main{
     display: flex;
     justify-content: space-around;
 }
-.card{
+.facts-container .card{
     border-radius: 8px;
     border: 1px solid orange;
     text-align: center;
@@ -125,12 +125,57 @@ main{
 .sponsors-img-container img{
     width: 165px;
 }
+.features{
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+    padding: 50px;
+}
+.feature-container .card{
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0px 4px 30px 0px black;
+    padding: 30px;
+    margin-bottom: 20px;
+}
+.features .section-title{
+    border-left: 5px solid orange;
+    padding-left: 20px;
+}
+.features-img{
+    height: 80%;
+    margin-left: 50px;
+}
+.ten-years-badge{
+    border-radius: 8px;
+    background: #ff900e;
+    color: #fff;
+    width: 342px;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
+}
 @media screen and (max-width:576px) {
     header{
         padding: 20px;
     }
-    nav, .team-container{
+    nav, 
+    .team-container, 
+    .feature-container, 
+    .sponsors-img-container{
         flex-direction: column;
+    }
+    .features-img img{
+        width: 100%;
+        margin-left: 0;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
@@ -138,15 +183,19 @@ main{
     .facts-container{
         gap: 20px;
     }
-    .sponsors-img-container{
-        flex-direction: column;
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
     }
 }
 @media screen and (min-width:576px){
     header{
         padding: 20px;
     }
-    nav, .team-container, .sponsors-img-container{
+    nav,
+    .feature-container,
+    .team-container, 
+    .sponsors-img-container{
         flex-direction: column;
     }
     .facts-container{
